ITA 8547: work in progress

--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Abschluss.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Abschluss.cshtml
@@ -1,4 +1,4 @@
-﻿@model CkgDomainLogic.DataKonverter.ViewModels.KroschkeDataKonverterViewModel
+﻿@model CkgDomainLogic.DataConverter.ViewModels.DataConverterViewModel
 
 <h4>Konfiguration abgeschlossen</h4>
 
