--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model CkgDomainLogic.DataKonverter.ViewModels.KroschkeDataKonverterViewModel
+﻿@model CkgDomainLogic.DataConverter.ViewModels.DataConverterViewModel
 
-<link href="~/content/DataKonverter-Main.css" rel="stylesheet" type="text/css" />
+<link href="~/content/DataConverter-Main.css" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/jsPlumb-2.0.3.js")" type="text/javascript"></script>
 
 <style>
     
-    #DataKonverterContainer2 {
+    #DataConverterContainer2 {
         width: 100%; height: 500px; position: relative;
     }
     
@@ -224,7 +224,7 @@
     }
     
 </style>
-<h3 class="page-title">Data-Konverter <small>Administration</small></h3>
+<h3 class="page-title">Data-Converter <small>Administration</small></h3>
 
 <div class="portlet app-view">
     
