--- a/Work/CarDocu/shell/UserControls/DocuGroup/RibbonSection/ucScanDocuRibbonSectionFIN.xaml
+++ b/Work/CarDocu/shell/UserControls/DocuGroup/RibbonSection/ucScanDocuRibbonSectionFIN.xaml
@@ -8,6 +8,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.InputBindings>
         <KeyBinding Key="S" Modifiers="Alt" Command="{Binding ScanDocumentStartScanCommand}" />
+        <KeyBinding Key="A" Modifiers="Alt" Command="{Binding ScanDocumentSaveCommand}" />
     </UserControl.InputBindings>
     <Border Margin="10,0,10,0" Height="68" BorderThickness="0" BorderBrush="Gray" Padding="0">
         <StackPanel>
@@ -44,6 +45,7 @@
                     <TextBlock Margin="7,0,0,0" Text="{Binding FinNumber}" FontSize="11" Foreground="Blue" HorizontalAlignment="Left" 
                                Visibility="{Binding FinNumberAlertHintVisible, Converter={StaticResource BooleanVisibilityInverseConverter}}"
                                />
+                    <Button Name="DummyButton" Width="1" Height="1" />
                     <ComboBox   Name="DropDown" 
                                 IsEnabled="{Binding ValidDocumentType}" 
                                 Margin="0,5,0,0" Padding="5,2,0,0" 
