Dropdown unwanted mouse capture issue

--- a/Work/CarDocu/shell/UserControls/DocuGroup/RibbonSection/ucScanDocuRibbonSectionFIN.xaml
+++ b/Work/CarDocu/shell/UserControls/DocuGroup/RibbonSection/ucScanDocuRibbonSectionFIN.xaml
@@ -57,7 +57,8 @@
                                 SelectedValuePath="Name" 
                                 TextSearch.TextPath="Name"  
                                 SelectedValue="{Binding SelectedTag}"
-                                PreviewMouseUp="ComboBox_TextBox_OnMouseDown"
+                                PreviewMouseUp="ComboBox_TextBox_OnPreviewMouseUp"
+                                PreviewMouseLeftButtonDown="ComboBox_OnPreviewMouseLeftButtonDown"
                                 PreviewKeyUp="ComboBox_OnPreviewKeyUp"
                                 KeyDown="ComboBox_KeyDown"
                                 IsVisibleChanged="ComboBox_OnIsVisibleChanged"
